--- a/pat.css
+++ b/pat.css
@@ -7,7 +7,7 @@ body {
 }
 
 #firstheadline{
-    background-image: url(/MyCodes/Images/Homepage.png);
+    background-image: url(Images/Homepage.png);
     height: 100vh;
     background-position: center;
     background-repeat: no-repeat;
