--- a/index.css
+++ b/index.css
@@ -102,7 +102,14 @@ body {
 
 /* webdevtools media query */
 
-@media (max-width:576px) {
+@media (max-width:400px) {
+    #webdevtools img {
+        width: 70%;
+        padding-top: 18%;
+    }
+}
+
+@media (max-width:576px) and (min-width:400px) {
     #webdevtools img {
         width: 70%;
         padding-top: 40%;
