--- a/index.css
+++ b/index.css
@@ -166,27 +166,27 @@ body {
 /* secondheadline media query */
 
 @media (max-width:1820px) {
-    #secondheadline #frontend:hover {
+    #mainskills #frontend:hover {
         color: white;
         background-image: url(https://images.unsplash.com/photo-1461749280684-dccba630e2f6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80);
         background-size: cover;
     }
-    #secondheadline #drafting:hover {
+    #mainskills #drafting:hover {
         color: white;
         background-image: url(https://images.unsplash.com/photo-1547027072-332f09bd6bb3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80);
         background-size: cover;
     }
-    #secondheadline #videoediting:hover {
+    #mainskills #videoediting:hover {
         color: white;
         background-image: url(https://images.unsplash.com/photo-1574717024653-61fd2cf4d44d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80);
         background-size: cover;
     }
-    #secondheadline #socializing:hover {
+    #mainskills #socializing:hover {
         color: white;
         background-image: url(https://images.unsplash.com/photo-1523474438810-b04a2480633c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80);
         background-size: cover;
     }
-    #secondheadline .card:hover p {
+    #mainskills .card:hover p {
         visibility: hidden;
     }
 }
@@ -196,47 +196,47 @@ body {
 }
 
 #lines .line1 {
-    margin-top: -7%;
-    margin-left: 12.5%;
+    margin-top: -13%;
+    margin-left: 11.5%;
 }
 
 #lines .line2 {
-    margin-top: -21.3%;
+    margin-top: -16.3%;
     margin-left: 37.7%;
 }
 
 #lines .line3 {
-    margin-top: -63.8%;
+    margin-top: -72.8%;
     margin-left: 62.4%;
 }
 
 #lines .line4 {
-    margin-top: -20.3%;
-    margin-left: 86.9%;
+    margin-top: -15.9%;
+    margin-left: 88.2%;
 }
 
 #lines .image1 {
     width: 23%;
-    margin-top: -2%;
-    margin-left: 1.5%;
+    margin-top: -5%;
+    margin-left: 0.1%;
 }
 
 #lines .image2 {
     width: 23%;
-    margin-top: -2.5%;
-    margin-left: 26%;
+    margin-top: 1%;
+    margin-left: 25.8%;
 }
 
 #lines .image3 {
     width: 23%;
-    margin-top: -30.4%;
-    margin-left: 50.5%;
+    margin-top: -34.9%;
+    margin-left: 51.3%;
 }
 
 #lines .image4 {
     width: 23%;
-    margin-top: -2%;
-    margin-left: 74.9%;
+    margin-top: 1%;
+    margin-left: 77.3%;
 }
 
 /* lines media query */
@@ -299,10 +299,4 @@ body {
 }
 
 /* End CSS of First Wave of Content */
-
-
-
-
-
-
 
